# ai-self-evolving

./: .gitignore  4.2plan.md  README.md  conscious_agent_refinement.md  database_and_api_contracts.md  mvp_project_structure.md  pyproject.toml  self_evolving_model_design_draft.md  self_evolving_model_tech_stack.md  system_architecture_design.md
apps/api/app/: main.py
apps/api/app/core/: settings.py
apps/api/tests/: test_autobiography.py  test_consciousness_evaluation.py  test_core_capability.py  test_evolution.py  test_goals.py  test_health.py  test_language.py  test_runtime.py  test_self_model.py  test_social.py  test_task_execution.py
apps/console/: index.html  package.json
apps/console/src/: App.tsx  styles.css
apps/worker/app/: __init__.py  celery_app.py
apps/worker/tests/: test_celery_import.py
configs/evaluation/: default_profile.yaml
configs/prompts/: base_prompt.yaml
configs/workflows/: default_workflow.yaml
control/: celery.pidbox.exchange  default.exchange
deploy/compose/: docker-compose.yml
docs/consciousness/: autobiographical_memory_consolidation.md  consciousness_evaluation_framework.md  evaluation_integration_plan.md  global_workspace_design.md  goal_runtime_roadmap.md  language_module_design.md  metacognitive_monitor_design.md  offline_consolidation_job.md  reflective_loop_design.md  runtime_self_update_loop.md  self_evolution_loop_v1.md  self_model_spec.md  social_memory_design.md  workspace_integration_plan.md
scripts/: api_server.ps1  clean_historical_text.py
train/: common.py  evaluate.py  pipeline.py  preference.py  sft.py
(+39 files in other folders)
